[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryrelay"
version = "0.1.1"
description = "Official Python SDK for MemoryRelay - persistent memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MemoryRelay Team", email = "hello@memoryrelay.io" }
]
keywords = ["ai", "memory", "vector-search", "embeddings", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://memoryrelay.io"
Documentation = "https://memoryrelay.io/docs"
Repository = "https://github.com/memoryrelay/python-sdk"
Issues = "https://github.com/memoryrelay/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["memoryrelay"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
